--- a/src/app/popups/two-factor-popup/sms-step-one/sms-step-one.component.html
+++ b/src/app/popups/two-factor-popup/sms-step-one/sms-step-one.component.html
@@ -51,4 +51,5 @@
   </form>
 
 </div>
-<a class="button button--center" (click)="onNextStep()">Get verification code</a>
+<!--<a class="button button&#45;&#45;center" (click)="onNextStep()">Get verification code</a>-->
+<button class="button button--center" (click)="onNextStep()">Get verification code</button>
