add identity steps

--- a/src/app/popups/identity-popup/identity-popup.component.html
+++ b/src/app/popups/identity-popup/identity-popup.component.html
@@ -1,3 +1,44 @@
 <p>
   identity-popup works!
 </p>
+<div class="modal-wrap">
+  <div class="modal">
+    <div class="modal__controls modal__controls--top"><a class="modal__button modal__button--close"><span>close</span><img class="modal__button-icon"
+                                                                                                                           src="../../../../assets/img/close.svg"></a>
+    </div>
+    <div class="modal__controls modal__controls--bottom"><a class="modal__button"><span> </span><img class="modal__button-icon" src="../../../../assets/img/minimize.svg"></a>
+    </div>
+    <div class="modal__header-mob">
+      <div class="steps__counter steps__counter--mob">step <span class="steps__counter-val">1</span>/4</div>
+      <div class="modal__header-mob-controls"><a class="modal__control-mob" href="#"><img class="modal__control-icon" src="../../../../assets/img/minimize-mob-blue.svg"></a><a
+        class="modal__control-mob" href="#"><img class="modal__control-icon" src="../../../../assets/img/learn-blue.svg"></a><a class="modal__control-mob" href="#"><img
+        class="modal__control-icon" src="../../../../assets/img/close-blue.svg"></a></div>
+    </div>
+    <div class="modal__header">
+      <ul class="steps">
+        <li class="steps__item steps__item--current"><a class="steps__link" href="#"><span class="steps__number steps__number--current">1</span><span
+          class="steps__number-mob-current">1. Enter info</span><span class="steps__title">Enter info</span></a></li>
+        <li class="steps__item"><a class="steps__link" href="#"><span class="steps__number">2</span><span class="steps__number-mob-current">2. Document photo</span><span
+          class="steps__title">Document photo</span></a></li>
+        <li class="steps__item"><a class="steps__link" href="#"><span class="steps__number">3</span><span
+          class="steps__number-mob-current">3. Your photo</span><span class="steps__title">Your photo</span></a></li>
+        <li class="steps__item"><a class="steps__link" href="#"><span class="steps__number">4</span><span
+          class="steps__number-mob-current">4. Progress</span><span class="steps__title">Progress</span></a></li>
+      </ul>
+      <div class="steps__counter">step <span class="steps__counter-val">1</span>/4</div>
+    </div>
+    <div class="modal__content">
+      <div class="modal__title">Submission received!</div>
+      <div class="modal__subtitle">
+        <p>You can check status of your verification on your <a class="link" href="#">profile page</a>. </p>
+      </div>
+      <div class="modal__row modal__row--mb32 txt-grey">Please note that it can take a few minutes to auto-verify your account. If more
+        information is neededto verify your account, our support team will reach out
+        via email to guide you through the process.
+      </div>
+      <div class="modal__row">
+        <a href="#" class="button"> Ok</a>
+      </div>
+    </div>
+  </div>
+</div>
