--- a/src/app/popups/identity-popup/step-four/step-four.component.html
+++ b/src/app/popups/identity-popup/step-four/step-four.component.html
@@ -1,3 +1,4 @@
-<p>
-  step-four works!
-</p>
+<div class="modal__title">Submission received!</div>
+<div class="modal__subtitle">
+  <p>You can check status of your verification on your <a href="#">profile page</a>. </p>
+</div>
