added some identity items

--- a/src/app/popups/identity-popup/step-one/step-one.component.html
+++ b/src/app/popups/identity-popup/step-one/step-one.component.html
@@ -49,5 +49,5 @@
       <div class="wrap-input__line"></div>
     </div>
   </div>
-  <button class="button pasport-form__button">Submit</button>
+  <button class="button pasport-form__button" (click)="onSubmit()">Submit</button>
 </form>
