--- a/src/app/popups/two-factor-popup/two-factor-popup.component.html
+++ b/src/app/popups/two-factor-popup/two-factor-popup.component.html
@@ -67,7 +67,7 @@
           <app-google-step-three></app-google-step-three>
         </div>
         <div *ngSwitchCase="4">
-          <app-google-step-three></app-google-step-three>
+          <app-google-step-four></app-google-step-four>
         </div>
       </div>
 
