--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -20,6 +20,7 @@
 @import "open-balance-mob";
 @import "radio-btn";
 @import "select";
+@import "datepicker";
 /*----- CONTENT END -----*/
 @import "footer";
 @import "modal";
