--- a/src/app/popups/identity-popup/step-one/step-one.component.html
+++ b/src/app/popups/identity-popup/step-one/step-one.component.html
@@ -22,10 +22,10 @@
       <div class="wrap-input__line"></div>
     </div>
     <div class="wrap-input pasport-form__input">
-      <input
-        class="input input--with-icon"
-        type="text"
-        formControlName="born">
+      <!--<input-->
+        <!--class="input input&#45;&#45;with-icon"-->
+        <!--type="text"-->
+        <!--formControlName="born">-->
 
       <my-date-picker
         name="born"
@@ -34,12 +34,14 @@
         formControlName="born">
 
       </my-date-picker>
+      <style>
 
-      <span class="wrap-input__icon">
-        <img src="../../../../assets/img/calendar.svg">
-      </span>
-      <label class="wrap-input__label wrap-input__label--with-icon">Date of birth</label>
-      <div class="wrap-input__line"></div>
+      </style>
+      <!--<span class="wrap-input__icon">-->
+        <!--<img src="../../../../assets/img/calendar.svg">-->
+      <!--</span>-->
+      <!--<label class="wrap-input__label wrap-input__label&#45;&#45;with-icon">Date of birth</label>-->
+      <div class="wrap-input__line" style="position: absolute; bottom: 1px;"></div>
     </div>
     <div class="wrap-input pasport-form__input pasport-form__input--mob-only">
       <input
