--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,3 +27,4 @@
 //@import "./assets/scss/footer";
 @import "./assets/scss/modal";
 @import "./assets/scss/chat-btn";
+@import "./assets/scss/datepicker";
