--- a/src/app/popups/identity-popup/step-two/webcam/webcam.component.html
+++ b/src/app/popups/identity-popup/step-two/webcam/webcam.component.html
@@ -5,23 +5,23 @@
         (initError)="handleInitError($event)"
 ></webcam>
 
-<button (click)="triggerSnapshot();">Take A Snapshot</button>
-<br/>
-<button class="actionBtn" (click)="showNextWebcam(true);" [disabled]="!multipleWebcamsAvailable">Next Webcam</button>
+<!--<button (click)="triggerSnapshot();">Take A Snapshot</button>-->
+<!--<br/>-->
+<!--<button class="actionBtn" (click)="showNextWebcam(true);" [disabled]="!multipleWebcamsAvailable">Next Webcam</button>-->
 
-<input id="cameraSwitchCheckbox" type="checkbox" [(ngModel)]="allowCameraSwitch">
-<label for="cameraSwitchCheckbox">Allow Camera Switch</label>
+<!--<input id="cameraSwitchCheckbox" type="checkbox" [(ngModel)]="allowCameraSwitch">-->
+<!--<label for="cameraSwitchCheckbox">Allow Camera Switch</label>-->
 
-DeviceId: <input id="deviceId" type="text" [(ngModel)]="deviceId" style="width: 500px">
+<!--DeviceId: <input id="deviceId" type="text" [(ngModel)]="deviceId" style="width: 500px">-->
 
-<button (click)="showNextWebcam(deviceId);">Activate</button>
+<!--<button (click)="showNextWebcam(deviceId);">Activate</button>-->
 
-<div class="snapshot" *ngIf="webcamImage">
-  <h2>Nice one!</h2>
-  <img [src]="webcamImage.imageAsDataUrl"/>
-</div>
+<!--<div class="snapshot" *ngIf="webcamImage">-->
+  <!--<h2>Nice one!</h2>-->
+  <!--<img [src]="webcamImage.imageAsDataUrl"/>-->
+<!--</div>-->
 
-<h4 *ngIf="errors.length > 0">Messages:</h4>
-<ul *ngFor="let error of errors">
-  <li>{{error | json}}</li>
-</ul>
+<!--<h4 *ngIf="errors.length > 0">Messages:</h4>-->
+<!--<ul *ngFor="let error of errors">-->
+  <!--<li>{{error | json}}</li>-->
+<!--</ul>-->
