--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -35,6 +35,9 @@ b{
 .txt-grey{
   color: $grey;
 }
+.txt-center{
+  text-align: center;
+}
 .page-wrap {
   position: relative;
   min-height: 100%;
