ädd upload img div

--- a/src/app/popups/identity-popup/step-two/step-two.component.html
+++ b/src/app/popups/identity-popup/step-two/step-two.component.html
@@ -16,9 +16,7 @@
       </div>
       <div class="modal__user-block">
         <div class="txt-center modal__documents-title">Your cam</div>
-        <!--<app-webcam *ngIf="isWebcamEnabled" (onWebcamVisible)="isWebcamEnabled = false"></app-webcam>-->
         <app-webcam *ngIf="displayMode === WEBCAM" (showWebcam)="displayMode = STEP"></app-webcam>
-        <!--<app-doc-upload *ngIf="displayMode === FILE" (showFile)="displayMode = STEP"></app-doc-upload>-->
       </div>
     </div>
   </div>
@@ -40,6 +38,7 @@
         <div class="txt-center modal__documents-title">Your cam</div>
         <!--<app-webcam *ngIf="isWebcamEnabled" (onWebcamVisible)="isWebcamEnabled = false"></app-webcam>-->
         <!--<app-webcam *ngIf="displayMode === WEBCAM" (showWebcam)="displayMode = STEP"></app-webcam>-->
+        <div class="modal__upload-img"></div>
         <app-doc-upload *ngIf="displayMode === FILE" (showFile)="displayMode = STEP"></app-doc-upload>
       </div>
     </div>
