--- a/src/assets/scss/_modal.scss
+++ b/src/assets/scss/_modal.scss
@@ -239,6 +239,13 @@
   }
   &__example-img{
     display: block;
+    width: 100%;
+    max-height: 136px;
+  }
+  &__upload-img{
+    width: 100%;
+    max-height: 136px;
+    height: 136px;
   }
   &__documents-title{
     margin-bottom: 16px;
