--- a/src/app/popups/identity-popup/doc-upload/doc-upload.component.html
+++ b/src/app/popups/identity-popup/doc-upload/doc-upload.component.html
@@ -2,6 +2,11 @@
   doc-upload works!
 </p>
 
-<input type="file"
-       id="file"
-       (change)="handleFileInput($event.target.files)">
+<input type='file' (change)="onSelectFile($event)">
+
+<div *ngIf="isFileValid(); else nonvalid">
+  <img [src]="url" height="200"> <br/>
+</div>
+<ng-template #nonvalid>
+  <p *ngIf="fileToUpload != null">File not valid</p>
+</ng-template>
