--- a/src/app/popups/identity-popup/step-two/step-two.component.html
+++ b/src/app/popups/identity-popup/step-two/step-two.component.html
@@ -32,14 +32,15 @@
     <div class="modal__documents-row">
       <div class="modal__example-block">
         <div class="txt-center modal__documents-title">Example</div>
-        <img src="../../../../assets/img/example-doc.png" alt="" class="modal__example-img">
+        <img src="../../../../assets/img/upload_example.svg" alt="" class="modal__example-img">
       </div>
       <div class="modal__user-block">
         <div class="txt-center modal__documents-title">Your cam</div>
         <!--<app-webcam *ngIf="isWebcamEnabled" (onWebcamVisible)="isWebcamEnabled = false"></app-webcam>-->
         <!--<app-webcam *ngIf="displayMode === WEBCAM" (showWebcam)="displayMode = STEP"></app-webcam>-->
-        <div class="modal__upload-img"></div>
-        <app-doc-upload *ngIf="displayMode === FILE" (showFile)="displayMode = STEP"></app-doc-upload>
+        <div class="modal__upload-img">
+          <app-doc-upload *ngIf="displayMode === FILE" (showFile)="displayMode = STEP"></app-doc-upload>
+        </div>
       </div>
     </div>
   </div>
