--- a/src/assets/scss/_modal.scss
+++ b/src/assets/scss/_modal.scss
@@ -246,6 +246,7 @@
     width: 100%;
     max-height: 136px;
     height: 136px;
+    position: relative;
   }
   &__documents-title{
     margin-bottom: 16px;
