--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,3 +28,4 @@
 @import "./assets/scss/modal";
 @import "./assets/scss/chat-btn";
 @import "./assets/scss/datepicker";
+@import "./assets/scss/input-file";
