--- a/src/app/popups/identity-popup/step-two/step-two.component.html
+++ b/src/app/popups/identity-popup/step-two/step-two.component.html
@@ -12,16 +12,22 @@
     <div class="modal__documents-row">
       <div class="modal__example-block">
         <div class="txt-center modal__documents-title">Example</div>
-        <img src="../../../../assets/img/example-doc.png" alt="" class="modal__example-img">
+        <img src="../../../../assets/img/upload_example.svg" alt="" class="modal__example-img">
       </div>
       <div class="modal__user-block">
         <div class="txt-center modal__documents-title">Your cam</div>
-        <app-webcam *ngIf="displayMode === WEBCAM" (showWebcam)="displayMode = STEP"></app-webcam>
+        <app-webcam
+          *ngIf="displayMode === WEBCAM"
+          (showWebcam)="displayMode = STEP"
+          (submitResult)="processSubmitResult($event)"
+          [events]="submitEventSubject.asObservable()"
+        >
+        </app-webcam>
       </div>
     </div>
   </div>
   <div class="modal__row">
-    <button class="button button--active">Submit</button>
+    <button class="button button--active" (click)="onSubmit(WEBCAM)">Submit</button>
   </div>
 </div>
 <div *ngIf="displayMode === FILE">
@@ -39,13 +45,18 @@
         <!--<app-webcam *ngIf="isWebcamEnabled" (onWebcamVisible)="isWebcamEnabled = false"></app-webcam>-->
         <!--<app-webcam *ngIf="displayMode === WEBCAM" (showWebcam)="displayMode = STEP"></app-webcam>-->
         <div class="modal__upload-img">
-          <app-doc-upload *ngIf="displayMode === FILE" (showFile)="displayMode = STEP"></app-doc-upload>
+          <app-doc-upload
+            *ngIf="displayMode === FILE"
+            (showFile)="displayMode = STEP"
+            (submitResult)="processSubmitResult($event)"
+            [events]="submitEventSubject.asObservable()"
+          ></app-doc-upload>
         </div>
       </div>
     </div>
   </div>
   <div class="modal__row">
-    <button class="button button--active">Submit</button>
+    <button class="button button--active" (click)="onSubmit(FILE)">Submit</button>
   </div>
 </div>
 
