--- a/src/app/popups/identity-popup/step-two/step-two.component.html
+++ b/src/app/popups/identity-popup/step-two/step-two.component.html
@@ -32,7 +32,7 @@
 </div>
 <div *ngIf="displayMode === FILE">
   <div class="modal__subtitle">
-    <p>Make photo of document</p>
+    <p>Download photo of document</p>
   </div>
   <div class="modal__identity-block">
     <div class="modal__documents-row">
