added support for third component

--- a/src/app/popups/identity-popup/step-two/step-two.component.html
+++ b/src/app/popups/identity-popup/step-two/step-two.component.html
@@ -1,9 +1,7 @@
-<div class="modal__title">Identity Verification</div>
-<!--<div class="modal__subtitle">-->
-<!--<p>Choose how to submit your ID</p>-->
-<!--</div>-->
-<!--<div class="modal__identity-block">-->
-<!--<div class="modal__identity-action">-->
+<div class="modal__title">
+  Identity Verification
+</div>
+
 <div *ngIf="displayMode === WEBCAM">
   <div class="modal__subtitle">
     <p>Make photo of document</p>
